Add memory viewer — search, filter, full document reader (secrets scrubbed)

--- a/calendar.html
+++ b/calendar.html
@@ -353,6 +353,7 @@
       <div class="nav-links">
         <a href="index.html" class="nav-link">Tasks</a>
         <a href="calendar.html" class="nav-link active">Calendar</a>
+        <a href="memory.html" class="nav-link">Memory</a>
       </div>
     </nav>
 
