--- a/memory.html
+++ b/memory.html
@@ -17,6 +17,7 @@
         <a href="index.html" class="nav-tab">Tasks</a>
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab active">Memory</a>
+        <a href="team.html" class="nav-tab">Team</a>
       </div>
       <div class="nav-right">
         <div class="nav-status"><div class="nav-status-dot"></div>Online</div>
