Add Office page — live workstations, agent status, digital office floor

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab">Team</a>
+        <a href="office.html" class="nav-tab">Office</a>
       </div>
       <div class="nav-right">
         <div class="nav-status">
