--- a/team.html
+++ b/team.html
@@ -238,6 +238,7 @@
         <a href="calendar.html" class="nav-tab">Calendar</a>
         <a href="memory.html" class="nav-tab">Memory</a>
         <a href="team.html" class="nav-tab active">Team</a>
+        <a href="office.html" class="nav-tab">Office</a>
       </div>
       <div class="nav-right">
         <div class="nav-status"><div class="nav-status-dot"></div>Online</div>
