--- a/office.html
+++ b/office.html
@@ -8,32 +8,32 @@
   <style>
     .office-floor {
       position: relative;
-      margin-bottom: 32px;
+      margin-bottom: 20px;
     }
 
     /* Executive row */
     .exec-row {
       display: flex;
       justify-content: center;
-      gap: 32px;
-      margin-bottom: 40px;
-      padding-bottom: 32px;
+      gap: 12px;
+      margin-bottom: 24px;
+      padding-bottom: 20px;
       border-bottom: 1px solid var(--border);
     }
 
     /* Agent workstation grid */
     .workstation-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      gap: 6px;
     }
 
     /* ─── Workstation ─── */
     .workstation {
       background: var(--surface);
       border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 20px;
+      border-radius: var(--radius-lg);
+      padding: 12px;
       transition: all 0.2s;
       position: relative;
       overflow: hidden;
@@ -59,15 +59,15 @@
     }
 
     .workstation.is-exec {
-      min-width: 280px;
+      min-width: 240px;
     }
 
     /* Desk area */
     .desk {
       display: flex;
-      gap: 14px;
+      gap: 10px;
       align-items: flex-start;
-      margin-bottom: 14px;
+      margin-bottom: 8px;
     }
 
     /* Avatar + chair */
@@ -76,36 +76,35 @@
       flex-shrink: 0;
     }
     .avatar-seat {
-      width: 52px;
-      height: 52px;
+      width: 40px;
+      height: 40px;
       background: var(--surface-3);
-      border-radius: 12px;
+      border-radius: var(--radius);
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 26px;
+      font-size: 20px;
       position: relative;
       transition: all 0.3s;
     }
-    /* When agent is away, dim the seat */
     .workstation.is-away .avatar-seat {
       opacity: 0.3;
     }
     /* Status ring */
     .avatar-ring {
       position: absolute;
-      inset: -3px;
-      border-radius: 14px;
+      inset: -2px;
+      border-radius: 8px;
       border: 2px solid transparent;
     }
-    .status-online .avatar-ring { border-color: var(--green); box-shadow: 0 0 8px rgba(34,197,94,0.2); }
-    .status-working .avatar-ring { border-color: var(--blue); box-shadow: 0 0 8px rgba(59,130,246,0.2); animation: ring-pulse 2s ease-in-out infinite; }
+    .status-online .avatar-ring { border-color: var(--green); box-shadow: 0 0 6px rgba(34,197,94,0.2); }
+    .status-working .avatar-ring { border-color: var(--blue); box-shadow: 0 0 6px rgba(59,130,246,0.2); animation: ring-pulse 2s ease-in-out infinite; }
     .status-standby .avatar-ring { border-color: var(--text-dim); }
     .status-away .avatar-ring { border-color: transparent; }
 
     @keyframes ring-pulse {
-      0%, 100% { box-shadow: 0 0 8px rgba(59,130,246,0.2); }
-      50% { box-shadow: 0 0 14px rgba(59,130,246,0.35); }
+      0%, 100% { box-shadow: 0 0 6px rgba(59,130,246,0.2); }
+      50% { box-shadow: 0 0 12px rgba(59,130,246,0.3); }
     }
 
     /* Agent info next to avatar */
@@ -113,42 +112,50 @@
     .agent-name-row {
       display: flex;
       align-items: center;
-      gap: 8px;
-      margin-bottom: 2px;
+      gap: 6px;
+      margin-bottom: 1px;
     }
     .agent-name {
-      font-size: 14px;
+      font-size: 12px;
       font-weight: 600;
       color: var(--text-bright);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .agent-role-tag {
-      padding: 2px 6px;
+      padding: 1px 5px;
       border-radius: 3px;
-      font-size: 9px;
+      font-size: 8px;
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 0.03em;
+      flex-shrink: 0;
     }
     .agent-title-text {
-      font-size: 11px;
+      font-size: 10px;
       color: var(--text-muted);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     /* Monitor / screen */
     .monitor {
       background: var(--bg);
       border: 1px solid var(--border-hover);
-      border-radius: 8px;
-      padding: 12px 14px;
-      min-height: 64px;
+      border-radius: 4px;
+      padding: 8px 10px;
+      min-height: 44px;
       position: relative;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
+      font-family: 'SF Mono', 'Fira Code', 'Cascadia Code', monospace;
     }
     .monitor::before {
       content: '';
       position: absolute;
-      top: 8px; left: 10px;
-      width: 6px; height: 6px;
+      top: 7px; left: 8px;
+      width: 5px; height: 5px;
       border-radius: 50%;
     }
     .status-online .monitor::before { background: var(--green); box-shadow: 0 0 4px rgba(34,197,94,0.5); }
@@ -162,34 +169,38 @@
     }
 
     .monitor-content {
-      margin-left: 16px;
-      font-size: 11px;
+      margin-left: 14px;
+      font-size: 10px;
       color: var(--text-secondary);
-      line-height: 1.5;
+      line-height: 1.4;
     }
     .monitor-label {
-      font-size: 9px;
+      font-size: 8px;
       color: var(--text-dim);
       text-transform: uppercase;
       letter-spacing: 0.06em;
       font-weight: 600;
-      margin-bottom: 3px;
+      margin-bottom: 2px;
     }
     .monitor-task {
-      font-size: 12px;
+      font-size: 11px;
       color: var(--text);
       font-weight: 500;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .monitor-idle {
       color: var(--text-dim);
       font-style: italic;
+      font-size: 10px;
     }
 
     /* Typing animation for working agents */
     .typing-indicator {
       display: inline-flex;
-      gap: 3px;
-      margin-left: 4px;
+      gap: 2px;
+      margin-left: 3px;
       vertical-align: middle;
     }
     .typing-dot {
@@ -214,14 +225,14 @@
     .station-status {
       display: flex;
       align-items: center;
-      gap: 5px;
-      font-size: 10px;
+      gap: 4px;
+      font-size: 9px;
       font-weight: 600;
       text-transform: uppercase;
       letter-spacing: 0.04em;
     }
     .station-status-dot {
-      width: 5px; height: 5px;
+      width: 4px; height: 4px;
       border-radius: 50%;
     }
     .ss-online .station-status-dot { background: var(--green); }
@@ -234,7 +245,7 @@
     .ss-away { color: var(--text-dim); opacity: 0.5; }
 
     .station-uptime {
-      font-size: 10px;
+      font-size: 9px;
       color: var(--text-dim);
       font-variant-numeric: tabular-nums;
     }
@@ -254,19 +265,19 @@
       gap: 1px;
       background: var(--border);
       border: 1px solid var(--border);
-      border-radius: 10px;
+      border-radius: var(--radius-lg);
       overflow: hidden;
-      margin-bottom: 28px;
+      margin-bottom: 20px;
     }
     .status-bar-item {
       background: var(--surface);
-      padding: 12px 16px;
+      padding: 8px 12px;
       flex: 1;
       text-align: center;
       min-width: 0;
     }
-    .sb-label { font-size: 10px; color: var(--text-dim); font-weight: 500; margin-bottom: 2px; }
-    .sb-value { font-size: 20px; font-weight: 700; color: var(--text-bright); font-variant-numeric: tabular-nums; }
+    .sb-label { font-size: 9px; color: var(--text-dim); font-weight: 500; margin-bottom: 1px; text-transform: uppercase; letter-spacing: 0.03em; }
+    .sb-value { font-size: 18px; font-weight: 700; color: var(--text-bright); font-variant-numeric: tabular-nums; line-height: 1.2; }
 
     /* Office ambiance - subtle grid pattern */
     .office-bg {
@@ -281,14 +292,14 @@
 
     /* Live clock */
     .office-clock {
-      font-size: 11px;
+      font-size: 10px;
       color: var(--text-dim);
       font-variant-numeric: tabular-nums;
       font-family: 'SF Mono', 'Fira Code', monospace;
     }
 
     @media (max-width: 768px) {
-      .exec-row { flex-direction: column; align-items: center; gap: 12px; }
+      .exec-row { flex-direction: column; align-items: center; gap: 8px; }
       .workstation-grid { grid-template-columns: 1fr; }
       .workstation.is-exec { min-width: auto; }
     }
